--- a/_modules/index.html
+++ b/_modules/index.html
@@ -49,6 +49,7 @@
 <ul><li><a href="iceprod/core.html">iceprod.core</a></li>
 <ul><li><a href="iceprod/core/dataclasses.html">iceprod.core.dataclasses</a></li>
 <li><a href="iceprod/core/exe.html">iceprod.core.exe</a></li>
+<li><a href="iceprod/core/exe_helper.html">iceprod.core.exe_helper</a></li>
 <li><a href="iceprod/core/exe_json.html">iceprod.core.exe_json</a></li>
 <li><a href="iceprod/core/functions.html">iceprod.core.functions</a></li>
 <li><a href="iceprod/core/gridftp.html">iceprod.core.gridftp</a></li>
