--- a/core/functions.html
+++ b/core/functions.html
@@ -27,7 +27,7 @@
     <link rel="top" title="IceProd 2.0.4 documentation" href="../index.html" />
     <link rel="up" title="IceProd Core" href="index.html" />
     <link rel="next" title="GridFTP" href="gridftp.html" />
-    <link rel="prev" title="Execution" href="exe.html" /> 
+    <link rel="prev" title="JSONRPC Calls" href="exe_json.html" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -43,7 +43,7 @@
           <a href="gridftp.html" title="GridFTP"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="exe.html" title="Execution"
+          <a href="exe_json.html" title="JSONRPC Calls"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">IceProd 2.0.4 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="index.html" accesskey="U">IceProd Core</a> &#187;</li> 
@@ -371,8 +371,8 @@ CORSIKA sample.</p>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="exe.html"
-                        title="previous chapter">Execution</a></p>
+  <p class="topless"><a href="exe_json.html"
+                        title="previous chapter">JSONRPC Calls</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="gridftp.html"
                         title="next chapter">GridFTP</a></p>
@@ -410,7 +410,7 @@ CORSIKA sample.</p>
           <a href="gridftp.html" title="GridFTP"
              >next</a> |</li>
         <li class="right" >
-          <a href="exe.html" title="Execution"
+          <a href="exe_json.html" title="JSONRPC Calls"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">IceProd 2.0.4 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="index.html" >IceProd Core</a> &#187;</li> 
