--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -574,6 +574,8 @@
             <span class="n">sql2</span> <span class="o">+=</span> <span class="s">&#39; status = ?, failures = ?, status_changed = ? &#39;</span>
             <span class="n">bindings2</span> <span class="o">=</span> <span class="p">[</span><span class="n">status</span><span class="p">,</span><span class="n">failures</span><span class="p">,</span><span class="n">now</span><span class="p">]</span>
             <span class="k">if</span> <span class="n">error_info</span> <span class="ow">and</span> <span class="s">&#39;resources&#39;</span> <span class="ow">in</span> <span class="n">error_info</span><span class="p">:</span>
+                <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error_resources: %r&#39;</span><span class="p">,</span> <span class="n">error_info</span><span class="p">[</span><span class="s">&#39;resources&#39;</span><span class="p">])</span>
+                <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;old task_reqs: %r&#39;</span><span class="p">,</span> <span class="n">task_reqs</span><span class="p">)</span>
                 <span class="c"># update requirements</span>
                 <span class="k">for</span> <span class="n">req</span> <span class="ow">in</span> <span class="n">error_info</span><span class="p">[</span><span class="s">&#39;resources&#39;</span><span class="p">]:</span>
                     <span class="n">req_value</span> <span class="o">=</span> <span class="n">error_info</span><span class="p">[</span><span class="s">&#39;resources&#39;</span><span class="p">][</span><span class="n">req</span><span class="p">]</span>
@@ -583,6 +585,7 @@
                             <span class="n">task_reqs</span><span class="p">[</span><span class="n">req</span><span class="p">]</span> <span class="o">=</span> <span class="n">req_value</span>
                     <span class="k">elif</span> <span class="n">req</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">task_reqs</span><span class="p">:</span>
                         <span class="n">task_reqs</span><span class="p">[</span><span class="n">req</span><span class="p">]</span> <span class="o">=</span> <span class="n">req_value</span>
+                <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;new task_reqs: %r&#39;</span><span class="p">,</span> <span class="n">task_reqs</span><span class="p">)</span>
                 <span class="n">sql2</span> <span class="o">+=</span> <span class="s">&#39;, requirements = ? &#39;</span>
                 <span class="n">bindings2</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">json_encode</span><span class="p">(</span><span class="n">task_reqs</span><span class="p">))</span>
             <span class="n">sql2</span> <span class="o">+=</span> <span class="s">&#39; where task_id = ?&#39;</span>
