--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -187,6 +187,7 @@
                 <span class="n">reqs</span><span class="p">[</span><span class="n">k</span><span class="p">]</span> <span class="o">=</span> <span class="n">args</span><span class="p">[</span><span class="n">k</span><span class="p">]</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="n">reqs</span><span class="p">[</span><span class="n">k</span><span class="p">]</span> <span class="o">=</span> <span class="n">Node_Resources</span><span class="p">[</span><span class="n">k</span><span class="p">]</span>
+        <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;new task for resources: %r&#39;</span><span class="p">,</span> <span class="n">reqs</span><span class="p">)</span>
         <span class="n">conn</span><span class="p">,</span><span class="n">archive_conn</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">_dbsetup</span><span class="p">()</span>
         
         <span class="k">while</span> <span class="k">True</span><span class="p">:</span>
