--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -204,8 +204,10 @@
             <span class="k">try</span><span class="p">:</span>
                 <span class="n">ret</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">_db_read</span><span class="p">(</span><span class="n">conn</span><span class="p">,</span><span class="n">sql</span><span class="p">,</span><span class="n">bindings</span><span class="p">,</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">)</span>
             <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
+                <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking&#39;</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
                 <span class="n">ret</span> <span class="o">=</span> <span class="n">e</span>
             <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">ret</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
+                <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking: %r&#39;</span><span class="p">,</span> <span class="n">ret</span><span class="p">)</span>
                 <span class="n">callback</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span>
                 <span class="k">return</span>
             <span class="n">task_id</span> <span class="o">=</span> <span class="k">None</span>
@@ -216,6 +218,7 @@
                 <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">row</span><span class="p">:</span>
                     <span class="n">resources</span><span class="p">[</span><span class="n">k</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s">&#39;req_&#39;</span><span class="p">,</span><span class="s">&#39;&#39;</span><span class="p">)]</span> <span class="o">=</span> <span class="n">row</span><span class="p">[</span><span class="n">k</span><span class="p">]</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="n">task_id</span><span class="p">:</span>
+                <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error, not task_id&#39;</span><span class="p">)</span>
                 <span class="n">callback</span><span class="p">(</span><span class="k">None</span><span class="p">)</span>
                 <span class="k">return</span>
             <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select * from search where task_id = ? and task_status = ?&#39;</span>
@@ -223,8 +226,10 @@
             <span class="k">try</span><span class="p">:</span>
                 <span class="n">ret</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">_db_read</span><span class="p">(</span><span class="n">conn</span><span class="p">,</span><span class="n">sql</span><span class="p">,</span><span class="n">bindings</span><span class="p">,</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">)</span>
             <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
+                <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking&#39;</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
                 <span class="n">ret</span> <span class="o">=</span> <span class="n">e</span>
             <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">ret</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
+                <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking: %r&#39;</span><span class="p">,</span> <span class="n">ret</span><span class="p">)</span>
                 <span class="n">callback</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span>
                 <span class="k">return</span>
             <span class="k">elif</span> <span class="ow">not</span> <span class="n">ret</span><span class="p">:</span>
@@ -235,8 +240,10 @@
                 <span class="k">try</span><span class="p">:</span>
                     <span class="n">ret</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">_db_write</span><span class="p">(</span><span class="n">conn</span><span class="p">,</span><span class="n">sql</span><span class="p">,</span><span class="n">bindings</span><span class="p">,</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">)</span>
                 <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
+                    <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking&#39;</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
                     <span class="n">ret</span> <span class="o">=</span> <span class="n">e</span>
                 <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">ret</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
+                    <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking: %r&#39;</span><span class="p">,</span> <span class="n">ret</span><span class="p">)</span>
                     <span class="n">callback</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span>
                     <span class="k">return</span>
             <span class="k">else</span><span class="p">:</span>
@@ -250,6 +257,7 @@
             <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;error converting search results&#39;</span><span class="p">,</span><span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
             <span class="k">pass</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="n">newtask</span><span class="p">:</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error: no task to allocate&#39;</span><span class="p">)</span>
             <span class="n">callback</span><span class="p">(</span><span class="n">newtask</span><span class="p">)</span>
             <span class="k">return</span>
         <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select job_index from job where job_id = ?&#39;</span>
@@ -259,7 +267,9 @@
         <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
             <span class="n">ret</span> <span class="o">=</span> <span class="n">e</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">ret</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking: %r&#39;</span><span class="p">,</span> <span class="n">ret</span><span class="p">)</span>
             <span class="n">callback</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span>
+            <span class="k">return</span>
         <span class="k">elif</span> <span class="ow">not</span> <span class="n">ret</span> <span class="ow">or</span> <span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="ow">is</span> <span class="k">None</span><span class="p">:</span>
             <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;failed to find job with known job_id %r&#39;</span><span class="p">,</span>
                         <span class="n">newtask</span><span class="p">[</span><span class="s">&#39;job_id&#39;</span><span class="p">])</span>
@@ -271,8 +281,10 @@
         <span class="k">try</span><span class="p">:</span>
             <span class="n">ret</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">_db_read</span><span class="p">(</span><span class="n">conn</span><span class="p">,</span><span class="n">sql</span><span class="p">,</span><span class="n">bindings</span><span class="p">,</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">)</span>
         <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking&#39;</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
             <span class="n">ret</span> <span class="o">=</span> <span class="n">e</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">ret</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking: %r&#39;</span><span class="p">,</span> <span class="n">ret</span><span class="p">)</span>
             <span class="n">callback</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span>
             <span class="k">return</span>
         <span class="k">elif</span> <span class="ow">not</span> <span class="n">ret</span> <span class="ow">or</span> <span class="ow">not</span> <span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">]:</span>
@@ -297,8 +309,10 @@
         <span class="k">try</span><span class="p">:</span>
             <span class="n">ret</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">_db_write</span><span class="p">(</span><span class="n">conn</span><span class="p">,[</span><span class="n">sql</span><span class="p">,</span><span class="n">sql2</span><span class="p">,</span><span class="n">sql3</span><span class="p">],[</span><span class="n">bindings</span><span class="p">,</span><span class="n">bindings2</span><span class="p">,</span><span class="n">bindings3</span><span class="p">],</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">,</span><span class="k">None</span><span class="p">)</span>
         <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking&#39;</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
             <span class="n">ret</span> <span class="o">=</span> <span class="n">e</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">ret</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_blocking: %r&#39;</span><span class="p">,</span> <span class="n">task</span><span class="p">)</span>
             <span class="n">callback</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_is_master</span><span class="p">():</span>
@@ -316,8 +330,10 @@
             <span class="n">callback</span><span class="p">(</span><span class="n">newtask</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">_rpc_new_task_callback</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">args</span><span class="p">,</span><span class="n">task</span><span class="p">,</span><span class="n">callback</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">task</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_callback: %r&#39;</span><span class="p">,</span> <span class="n">task</span><span class="p">)</span>
             <span class="n">callback</span><span class="p">(</span><span class="n">task</span><span class="p">)</span>
         <span class="k">elif</span> <span class="ow">not</span> <span class="n">task</span><span class="p">:</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;None in new_task_callback: %r&#39;</span><span class="p">,</span> <span class="n">task</span><span class="p">)</span>
             <span class="n">callback</span><span class="p">(</span><span class="k">None</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">cb</span> <span class="o">=</span> <span class="n">partial</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_rpc_new_task_callback2</span><span class="p">,</span><span class="n">task</span><span class="p">,</span><span class="n">callback</span><span class="o">=</span><span class="n">callback</span><span class="p">)</span>
@@ -325,6 +341,7 @@
                                                   <span class="n">callback</span><span class="o">=</span><span class="n">cb</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">_rpc_new_task_callback2</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">,</span><span class="n">ret</span><span class="p">,</span><span class="n">callback</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">ret</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error in new_task_callback2: %r&#39;</span><span class="p">,</span> <span class="n">ret</span><span class="p">)</span>
             <span class="n">callback</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">config</span> <span class="o">=</span> <span class="n">json_decode</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span>
