--- a/_modules/iceprod/core/util.html
+++ b/_modules/iceprod/core/util.html
@@ -154,8 +154,8 @@
 <span class="n">Node_Resources</span> <span class="o">=</span> <span class="p">{</span>
     <span class="s">&#39;cpu&#39;</span><span class="p">:</span> <span class="mi">1</span><span class="p">,</span>
     <span class="s">&#39;gpu&#39;</span><span class="p">:</span> <span class="mi">0</span><span class="p">,</span>
-    <span class="s">&#39;memory&#39;</span><span class="p">:</span> <span class="mi">1</span><span class="p">,</span> <span class="c"># in GB</span>
-    <span class="s">&#39;disk&#39;</span><span class="p">:</span> <span class="mi">10</span><span class="p">,</span> <span class="c"># in GB</span>
+    <span class="s">&#39;memory&#39;</span><span class="p">:</span> <span class="mf">1.0</span><span class="p">,</span> <span class="c"># float, in GB</span>
+    <span class="s">&#39;disk&#39;</span><span class="p">:</span> <span class="mf">10.0</span><span class="p">,</span> <span class="c"># float, in GB</span>
 <span class="p">}</span>
 
 <span class="c">#: The types of task resources, with defaults</span>
