--- a/genindex.html
+++ b/genindex.html
@@ -2839,6 +2839,10 @@
   </dt>
 
       
+  <dt><a href="core/util.html#iceprod.core.util.Task_Resource_Overusage">Task_Resource_Overusage (in module iceprod.core.util)</a>
+  </dt>
+
+      
   <dt><a href="core/util.html#iceprod.core.util.Task_Resources">Task_Resources (in module iceprod.core.util)</a>
   </dt>
 
