--- a/server/details/dbtables.html
+++ b/server/details/dbtables.html
@@ -219,6 +219,7 @@
 <li>passkey_id : str</li>
 <li>auth_key : str</li>
 <li>expire : str  <span class="gray"># datetime</span></li>
+<li>user_id : str</li>
 </ul>
 <p><strong>pilot</strong></p>
 <ul class="simple">
@@ -232,7 +233,9 @@
 <ul class="simple">
 <li>user_id : str</li>
 <li>username : str</li>
-<li>password : str</li>
+<li>name : str</li>
+<li>salt : str</li>
+<li>hash : str</li>
 <li>email : str</li>
 <li>admin : bool</li>
 <li>groups : Text  <span class="gray"># csv list of group_ids</span></li>
